--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.8"
 
 services:
   dashboard:
-    build: ./app
+    image: yourusername/vpn-dashboard:latest
     container_name: vpn-dashboard
     ports:
       - "5000:5000"
@@ -11,6 +11,12 @@ services:
     restart: unless-stopped
     networks:
       - vpn-network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:5000/api/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
 
   wireguard:
     image: linuxserver/wireguard
@@ -22,7 +28,7 @@ services:
       - PUID=1000
       - PGID=1000
       - TZ=UTC
-      - SERVERURL=${SERVERURL:-your-server-ip}
+      - SERVERURL=${SERVERURL:-102.164.37.37}
       - SERVERPORT=51820
       - PEERS=1
       - PEERDNS=1.1.1.1
